--- a/res/layout/layout_selectable_photo_grid.xml
+++ b/res/layout/layout_selectable_photo_grid.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.nexuspad.ui.view.DuplicateParentStateAwareFrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<com.nexuspad.ui.view.DuplicateParentStateAwareFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
-    <include layout="@layout/layout_photo_grid"/>
+    <include layout="@layout/layout_photo_grid" />
 
     <CheckBox
+        android:id="@android:id/checkbox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="top|right"
-        android:duplicateParentState="true"/>
+        android:duplicateParentState="true" />
 </com.nexuspad.ui.view.DuplicateParentStateAwareFrameLayout>
