--- a/res/layout/album_new_frag.xml
+++ b/res/layout/album_new_frag.xml
@@ -1,62 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-            style="@style/scrollableFrame"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
 
-    <LinearLayout
-        android:id="@+id/content"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:id="@+id/content"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:padding="@dimen/ed__padding_small"
+              android:orientation="vertical">
+
+    <TextView
+        style="?android:attr/listSeparatorTextViewStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:text="@string/folder"/>
+
+    <include layout="@layout/folder_selector_include"/>
+
+    <EditText
+        android:id="@+id/txt_album_name"
+        style="@style/formMargin"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/title"/>
+
+    <TextView
+        style="?android:attr/listSeparatorTextViewStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/photos"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
         <TextView
-            style="?android:attr/listSeparatorTextViewStyle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/folder"/>
-
-        <include layout="@layout/folder_selector_include"/>
-
-        <EditText
-            android:id="@+id/txt_album_name"
-            style="@style/formMargin"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/title"/>
+            android:id="@+id/pick_img"
+            android:padding="@dimen/ed__padding_small"
+            android:drawableLeft="@drawable/photo"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="@string/add_more"
+            android:gravity="center_vertical"
+            style="@style/selectableTextView"
+            />
 
         <TextView
-            style="?android:attr/listSeparatorTextViewStyle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/photos"/>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/pick_img"
-                android:padding="@dimen/ed__padding_small"
-                android:drawableLeft="@drawable/photo"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="@string/add_more"
-                android:gravity="center_vertical"
-                style="@style/selectableTextView"
-                />
-
-            <TextView
-                android:id="@+id/lbl_num_photos"
-                android:padding="@dimen/ed__padding_small"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:text="@string/add_more"
-                android:gravity="center_vertical|right"
-                />
-        </LinearLayout>
+            android:id="@+id/lbl_num_photos"
+            android:padding="@dimen/ed__padding_small"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="@string/add_more"
+            android:gravity="center_vertical|right"
+            />
     </LinearLayout>
 
-</ScrollView>
+    <include
+        layout="@layout/include_grid_view"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
+</LinearLayout>
