--- a/res/layout/photos_frag.xml
+++ b/res/layout/photos_frag.xml
@@ -8,7 +8,7 @@
     <FrameLayout
         android:id="@+id/sticky"
         android:layout_width="match_parent"
-        android:layout_height="48dp"
+        android:layout_height="@dimen/abs__action_bar_default_height"
         android:layout_alignParentBottom="true"
         android:background="#7F000000">
 
@@ -24,6 +24,6 @@
             android:scrollHorizontally="true"
             android:textColor="#FFFF"
             android:text="@string/root"
-            android:textSize="@dimen/ed__textsize_medium"/>
+            android:textSize="@dimen/abs__action_bar_title_text_size"/>
     </FrameLayout>
 </RelativeLayout>
