--- a/res/layout/doc_frag.xml
+++ b/res/layout/doc_frag.xml
@@ -1,20 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/scrollableFrame"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+            style="@style/scrollableFrame"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical" >
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/lbl_title"
             style="@style/listTitleTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/title" />
+            android:hint="@string/title"
+            />
+
+        <LinearLayout
+            android:id="@+id/attachments_frame"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            />
 
         <TextView
             android:id="@+id/lbl_note"
@@ -22,21 +30,24 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/doc"
-            android:minLines="8" />
+            android:minLines="8"
+            />
 
         <TextView
             android:id="@+id/lbl_tags_frame"
             style="?android:attr/listSeparatorTextViewStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/tags" />
+            android:text="@string/tags"
+            />
 
         <TextView
             android:id="@+id/lbl_tags"
             style="@style/listItemTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/tags" />
+            android:hint="@string/tags"
+            />
     </LinearLayout>
 
 </ScrollView>
