--- a/res/layout/list_content.xml
+++ b/res/layout/list_content.xml
@@ -23,6 +23,7 @@
 
         <ListView
             android:id="@android:id/list"
+            android:listSelector="?attr/selectableItemBackground"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:paddingBottom="@dimen/ed__padding_small"
