--- a/res/layout/contact_frag.xml
+++ b/res/layout/contact_frag.xml
@@ -1,29 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical">
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    style="@style/scrollableFrame"
+    android:paddingLeft="@dimen/ed__padding_medium"
+    android:paddingRight="@dimen/ed__padding_medium"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
-        <ImageView
-            android:id="android:id/icon"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:scaleType="centerCrop"
-            android:maxWidth="@dimen/photo_grid_width"
-            android:maxHeight="@dimen/photo_grid_height"/>
+            android:layout_marginBottom="@dimen/ed__padding_small"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@android:id/icon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:scaleType="centerCrop"
+                android:maxWidth="@dimen/photo_grid_width"
+                android:maxHeight="@dimen/photo_grid_height"
+                android:src="@drawable/ic_launcher"
+                tools:ignore="ContentDescription" />
+
+            <TextView
+                android:id="@android:id/title"
+                android:layout_gravity="center_vertical"
+                android:padding="@dimen/ed__padding_small"
+                android:textSize="@dimen/ed__textsize_large"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_marginLeft="@dimen/ed__padding_small"
+                android:hint="@string/title" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/ed__padding_small"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/lbl_first_name"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:hint="@string/first_name"
+                android:textSize="@dimen/ed__textsize_medium" />
+
+            <TextView
+                android:id="@+id/lbl_middle_name"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:hint="@string/middle_name"
+                android:textSize="@dimen/ed__textsize_medium" />
+        </LinearLayout>
 
         <TextView
-            android:id="android:id/title"
-            android:layout_width="0dp"
+            android:id="@+id/lbl_last_name"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_marginLeft="@dimen/ed__padding_small"
-            />
+            android:hint="@string/last_name"
+            android:layout_marginBottom="@dimen/ed__padding_small"
+            android:textSize="@dimen/ed__textsize_medium" />
+
+        <TextView
+            android:id="@+id/lbl_bussiness_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/business_name"
+            android:layout_marginBottom="@dimen/ed__padding_small"
+            android:textSize="@dimen/ed__textsize_medium" />
     </LinearLayout>
-</LinearLayout>
+</ScrollView>
