--- a/res/menu/photos_frag.xml
+++ b/res/menu/photos_frag.xml
@@ -13,7 +13,7 @@
                 <item
                     android:id="@+id/new_albums"
                     android:showAsAction="ifRoom"
-                    android:title="@string/new_albums"/>
+                    android:title="@string/new_album"/>
             </group>
         </menu>
     </item>
