--- a/res/layout/list_item_edittext_btn.xml
+++ b/res/layout/list_item_edittext_btn.xml
@@ -13,7 +13,7 @@
         android:layout_weight="1" />
 
     <ImageView
-        android:id="@android:id/closeButton"
+        android:id="@android:id/button1"
         android:layout_height="match_parent"
         android:layout_width="wrap_content"
         android:src="@android:drawable/ic_delete"
