--- a/res/layout/photos_select_frag.xml
+++ b/res/layout/photos_select_frag.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/abs__action_bar_default_height"
         android:layout_alignParentBottom="true"
-        android:background="#7F000000"
+        android:background="@color/transparent_black"
         android:showDividers="middle"
         android:orientation="horizontal">
 
