--- a/res/layout/contact_frag.xml
+++ b/res/layout/contact_frag.xml
@@ -80,6 +80,23 @@
             android:textSize="@dimen/ed__textsize_medium" />
 
         <TextView
+            android:id="@+id/lbl_address_frame"
+            style="?android:attr/listSeparatorTextViewStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:autoLink="all"
+            android:text="@string/address"/>
+
+        <TextView
+            android:id="@+id/lbl_address"
+            style="@style/selectableTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:autoLink="all"
+            android:hint="@string/address"
+            android:linksClickable="false"/>
+
+        <TextView
             android:id="@+id/lbl_phones"
             style="?android:attr/listSeparatorTextViewStyle"
             android:layout_width="match_parent"
@@ -124,6 +141,7 @@
             android:autoLink="web"
             android:hint="@string/web_address"
             android:linksClickable="false" />
+
 
         <TextView
             android:id="@+id/lbl_tags_frame"
