--- a/res/layout/event_new_frag.xml
+++ b/res/layout/event_new_frag.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-            style="@style/scrollableFrame"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+    style="@style/scrollableFrame"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:id="@+id/content"
@@ -10,38 +10,110 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <TextView
-            style="?android:attr/listSeparatorTextViewStyle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/folder"/>
-
-        <include layout="@layout/include_folder_selector"/>
-
         <EditText
             android:id="@+id/txt_title"
             style="@style/formMargin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/title"/>
+            android:hint="@string/title" />
 
-        <com.commonsware.cwac.richedit.RichEditText
-            android:id="@+id/txt_note"
+        <TextView
+            style="?android:attr/listSeparatorTextViewStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/location"/>
+
+        <TextView
+            android:id="@+id/txt_location"
+            style="@style/selectableTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/location"
+            android:drawableRight="@android:drawable/ic_menu_edit" />
+
+        <TextView
+            style="?android:attr/listSeparatorTextViewStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/from"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <com.actionbarsherlock.internal.widget.IcsSpinner
+                android:id="@+id/spinner_from_day"
+                style="@style/formMargin"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="5"
+                android:layout_marginTop="0dp"/>
+            <com.actionbarsherlock.internal.widget.IcsSpinner
+                android:id="@+id/spinner_from_time"
+                style="@style/formMargin"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="3"
+                android:layout_marginTop="0dp" />
+        </LinearLayout>
+
+        <TextView
+            style="?android:attr/listSeparatorTextViewStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/to"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <com.actionbarsherlock.internal.widget.IcsSpinner
+                android:id="@+id/spinner_to_day"
+                style="@style/formMargin"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="5"
+                android:layout_marginTop="0dp"/>
+            <com.actionbarsherlock.internal.widget.IcsSpinner
+                android:id="@+id/spinner_to_time"
+                style="@style/formMargin"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="3"
+                android:layout_marginTop="0dp" />
+        </LinearLayout>
+
+        <CheckBox
+            android:id="@+id/chk_all_day"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/ed__textsize_small"
+            android:text="@string/all_day"/>
+
+        <com.actionbarsherlock.internal.widget.IcsSpinner
+            android:id="@+id/spinner_repeat"
             style="@style/formMargin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/note"
-            android:imeOptions="flagNoExtractUi"
-            android:inputType="textMultiLine"
-            android:gravity="top"
-            android:minLines="@integer/notes_min_lines"/>
+            android:layout_marginTop="0dp" />
 
         <EditText
             android:id="@+id/txt_tags"
             style="@style/formMargin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/tags"/>
+            android:hint="@string/tags" />
+
+        <EditText
+            android:id="@+id/txt_note"
+            style="@style/formMargin"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:minLines="@integer/notes_min_lines"
+            android:gravity="top"
+            android:hint="@string/note" />
     </LinearLayout>
 
 </ScrollView>
