--- a/res/layout/event_new_frag.xml
+++ b/res/layout/event_new_frag.xml
@@ -42,14 +42,14 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <com.actionbarsherlock.internal.widget.IcsSpinner
+            <Button
                 android:id="@+id/spinner_from_day"
                 style="@style/formMargin"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="5"
                 android:layout_marginTop="0dp"/>
-            <com.actionbarsherlock.internal.widget.IcsSpinner
+            <Button
                 android:id="@+id/spinner_from_time"
                 style="@style/formMargin"
                 android:layout_width="0dp"
@@ -69,14 +69,14 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <com.actionbarsherlock.internal.widget.IcsSpinner
+            <Button
                 android:id="@+id/spinner_to_day"
                 style="@style/formMargin"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="5"
                 android:layout_marginTop="0dp"/>
-            <com.actionbarsherlock.internal.widget.IcsSpinner
+            <Button
                 android:id="@+id/spinner_to_time"
                 style="@style/formMargin"
                 android:layout_width="0dp"
@@ -92,7 +92,7 @@
             android:textSize="@dimen/ed__textsize_small"
             android:text="@string/all_day"/>
 
-        <com.actionbarsherlock.internal.widget.IcsSpinner
+        <Spinner
             android:id="@+id/spinner_repeat"
             style="@style/formMargin"
             android:layout_width="match_parent"
