--- a/res/menu/bookmarks_frag.xml
+++ b/res/menu/bookmarks_frag.xml
@@ -23,7 +23,7 @@
         android:icon="@android:drawable/ic_menu_search"
         android:showAsAction="always|collapseActionView"
         android:title="@string/search"
-        android:actionViewClass="com.actionbarsherlock.widget.SearchView"
+        android:actionViewClass="android.widget.SearchView"
         />
 
 </menu>
