--- a/res/layout/list_item_edittext_btn.xml
+++ b/res/layout/list_item_edittext_btn.xml
@@ -19,6 +19,6 @@
         android:src="@android:drawable/ic_delete"
         android:clickable="true"
         android:focusable="true"
-        android:background="?attr/selectableItemBackground"
+        android:background="?android:attr/selectableItemBackground"
         android:contentDescription="@android:string/cancel" />
 </LinearLayout>
