--- a/res/layout/albums_frag.xml
+++ b/res/layout/albums_frag.xml
@@ -9,7 +9,7 @@
     <LinearLayout
         android:id="@+id/sticky"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/abs__action_bar_default_height"
+        android:layout_height="?android:attr/actionBarSize"
         android:layout_gravity="bottom"
         android:orientation="horizontal"
         android:background="@color/transparent_black">
