--- a/res/layout/include_grid_view.xml
+++ b/res/layout/include_grid_view.xml
@@ -14,4 +14,4 @@
     android:stretchMode="spacingWidthUniform"
     android:background="@android:color/white"
     android:drawSelectorOnTop="true"
-    android:listSelector="?attr/selectableItemBackground" />
+    android:listSelector="?android:attr/selectableItemBackground" />
