--- a/res/layout/include_upload_bar.xml
+++ b/res/layout/include_upload_bar.xml
@@ -5,7 +5,7 @@
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="horizontal"
         android:layout_width="wrap_content"
-        android:layout_height="@dimen/abs__action_bar_default_height">
+        android:layout_height="?android:attr/actionBarSize">
 
         <TextView
             android:id="@+id/lbl_upload"
@@ -16,8 +16,7 @@
             android:gravity="center"
             android:drawablePadding="@dimen/ed__padding_small"
             android:drawableLeft="@drawable/ic_upload"
-            android:textColor="@android:color/white"
-            android:text="3" />
+            android:textColor="@android:color/white" />
 
         <TextView
             android:id="@+id/lbl_download"
@@ -28,7 +27,6 @@
             android:gravity="center"
             android:drawablePadding="@dimen/ed__padding_small"
             android:drawableLeft="@drawable/ic_download"
-            android:textColor="@android:color/white"
-            android:text="1" />
+            android:textColor="@android:color/white" />
     </LinearLayout>
 </merge>
