--- a/res/layout/layout_selectable_frame.xml
+++ b/res/layout/layout_selectable_frame.xml
@@ -5,6 +5,6 @@
              android:layout_height="match_parent"
              android:clickable="true"
              android:focusable="true"
-             android:background="?attr/selectableItemBackground">
+             android:background="?android:attr/selectableItemBackground">
 
 </FrameLayout>
