--- a/res/layout/photos_frag.xml
+++ b/res/layout/photos_frag.xml
@@ -8,7 +8,7 @@
     <LinearLayout
         android:id="@+id/sticky"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/abs__action_bar_default_height"
+        android:layout_height="?android:attr/actionBarSize"
         android:orientation="horizontal"
         android:layout_alignParentBottom="true"
         android:background="@color/transparent_black">
