--- a/res/layout/photos_select_frag.xml
+++ b/res/layout/photos_select_frag.xml
@@ -7,7 +7,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/abs__action_bar_default_height"
+        android:layout_height="?android:attr/actionBarSize"
         android:layout_alignParentBottom="true"
         android:background="@color/transparent_black"
         android:showDividers="middle"
@@ -19,8 +19,8 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
-            android:background="?attr/selectableItemBackground"
-            android:textSize="@dimen/abs__action_bar_title_text_size"
+            android:background="?android:attr/selectableItemBackground"
+            android:textSize="?android:attr/textAppearanceMedium"
             android:textColor="@android:color/white"
             android:text="@android:string/cancel" />
 
@@ -30,8 +30,8 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
-            android:background="?attr/selectableItemBackground"
-            android:textSize="@dimen/abs__action_bar_title_text_size"
+            android:background="?android:attr/selectableItemBackground"
+            android:textSize="?android:attr/textAppearanceMedium"
             android:textColor="@android:color/white"
             android:text="@android:string/ok"/>
     </LinearLayout>
