new class in ListFragment to delegate calls to different ListViews

--- a/res/layout/list_content_sticky.xml
+++ b/res/layout/list_content_sticky.xml
@@ -22,7 +22,7 @@
         android:visibility="gone" >
 
         <view
-            class="com.nexuspad.ui.view.ListWrappers$StickyWrapper"
+            class="se.emilsjolander.stickylistheaders.StickyListHeadersListView"
             android:id="@android:id/list"
             android:listSelector="?android:attr/selectableItemBackground"
             android:layout_width="match_parent"
