--- a/res/layout/event_new_frag.xml
+++ b/res/layout/event_new_frag.xml
@@ -42,14 +42,14 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <com.nexuspad.ui.view.DateButton
+            <com.nexuspad.calendar.ui.view.DateButton
                 android:id="@+id/spinner_start_day"
                 style="@style/formMargin"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="5"
                 android:layout_marginTop="0dp"/>
-            <com.nexuspad.ui.view.TimeButton
+            <com.nexuspad.calendar.ui.view.TimeButton
                 android:id="@+id/spinner_start_time"
                 style="@style/formMargin"
                 android:layout_width="0dp"
@@ -69,14 +69,14 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <com.nexuspad.ui.view.DateButton
+            <com.nexuspad.calendar.ui.view.DateButton
                 android:id="@+id/spinner_to_day"
                 style="@style/formMargin"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="5"
                 android:layout_marginTop="0dp"/>
-            <com.nexuspad.ui.view.TimeButton
+            <com.nexuspad.calendar.ui.view.TimeButton
                 android:id="@+id/spinner_to_time"
                 style="@style/formMargin"
                 android:layout_width="0dp"
@@ -92,7 +92,7 @@
             android:textSize="@dimen/ed__textsize_small"
             android:text="@string/all_day"/>
 
-        <Spinner
+        <TextView
             android:id="@+id/spinner_repeat"
             style="@style/formMargin"
             android:layout_width="match_parent"
