--- a/res/layout/doc_frag.xml
+++ b/res/layout/doc_frag.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-            style="@style/scrollableFrame"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+    style="@style/scrollableFrame"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -14,15 +14,13 @@
             style="@style/listTitleTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/title"
-            />
+            android:hint="@string/title" />
 
         <LinearLayout
             android:id="@+id/attachments_frame"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            />
+            android:orientation="vertical" />
 
         <TextView
             android:id="@+id/lbl_note"
@@ -31,16 +29,14 @@
             android:layout_height="wrap_content"
             android:hint="@string/doc"
             android:autoLink="all"
-            android:minLines="8"
-            />
+            android:minLines="8" />
 
         <TextView
             android:id="@+id/lbl_tags_frame"
             style="?android:attr/listSeparatorTextViewStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/tags"
-            />
+            android:text="@string/tags" />
 
         <TextView
             android:id="@+id/lbl_tags"
@@ -48,8 +44,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:autoLink="all"
-            android:hint="@string/tags"
-            />
+            android:hint="@string/tags" />
     </LinearLayout>
 
 </ScrollView>
