--- a/res/layout/list_item_event.xml
+++ b/res/layout/list_item_event.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<com.nexuspad.ui.view.DuplicateParentStateAwareLinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<com.nexuspad.ui.view.DuplicateParentStateAwareLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -22,7 +21,7 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:gravity="center_vertical"
-            android:textColor="@android:color/white"/>
+            android:textColor="@android:color/white" />
 
         <TextView
             android:id="@+id/lbl_date"
@@ -30,7 +29,7 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:gravity="center_vertical"
-            android:textColor="@android:color/white"/>
+            android:textColor="@android:color/white" />
     </LinearLayout>
 
     <LinearLayout
@@ -47,14 +46,14 @@
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
             android:textSize="@dimen/ed__textsize_medium"
-            android:textStyle="bold"/>
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/lbl_time"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
-            android:textColor="@android:color/darker_gray"/>
+            android:textColor="@android:color/darker_gray" />
 
     </LinearLayout>
 </com.nexuspad.ui.view.DuplicateParentStateAwareLinearLayout>
