--- a/res/layout/list_item_upload_photo.xml
+++ b/res/layout/list_item_upload_photo.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.nexuspad.ui.view.DuplicateParentStateAwareLinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<com.nexuspad.ui.view.DuplicateParentStateAwareLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -15,7 +14,7 @@
         android:layout_height="@dimen/photo_grid_height"
         android:layout_marginRight="@dimen/ed__padding_micro"
         android:scaleType="centerCrop"
-        tools:ignore="ContentDescription"/>
+        tools:ignore="ContentDescription" />
 
     <LinearLayout
         android:layout_width="0dp"
@@ -36,13 +35,13 @@
             android:paddingLeft="@dimen/ed__padding_small"
             android:paddingTop="@dimen/ed__padding_micro"
             android:scrollHorizontally="true"
-            android:textSize="@dimen/ed__textsize_medium"/>
+            android:textSize="@dimen/ed__textsize_medium" />
 
         <ProgressBar
             android:id="@android:id/progress"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            style="?android:attr/progressBarStyleHorizontal"/>
+            style="?android:attr/progressBarStyleHorizontal" />
 
         <TextView
             android:id="@android:id/text2"
@@ -57,7 +56,7 @@
             android:paddingTop="@dimen/ed__padding_micro"
             android:scrollHorizontally="true"
             android:textSize="@dimen/ed__textsize_small"
-            android:textColor="@android:color/darker_gray"/>
+            android:textColor="@android:color/darker_gray" />
     </LinearLayout>
 
     <ImageButton
@@ -68,6 +67,6 @@
         android:contentDescription="@string/more"
         android:duplicateParentState="false"
         android:scaleType="fitXY"
-        android:src="@drawable/spinner_ab_holo_light"/>
+        android:src="@drawable/spinner_ab_holo_light" />
 
 </com.nexuspad.ui.view.DuplicateParentStateAwareLinearLayout>
