--- a/res/menu/bookmarks_frag.xml
+++ b/res/menu/bookmarks_frag.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android" >
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
         android:icon="@android:drawable/ic_menu_add"
@@ -10,11 +10,11 @@
                 <item
                     android:id="@+id/new_folder"
                     android:showAsAction="ifRoom"
-                    android:title="@string/new_folder"/>
+                    android:title="@string/new_folder" />
                 <item
                     android:id="@+id/new_bookmark"
                     android:showAsAction="ifRoom"
-                    android:title="@string/new_bookmark"/>
+                    android:title="@string/new_bookmark" />
             </group>
         </menu>
     </item>
@@ -23,7 +23,6 @@
         android:icon="@android:drawable/ic_menu_search"
         android:showAsAction="always|collapseActionView"
         android:title="@string/search"
-        android:actionViewClass="android.widget.SearchView"
-        />
+        android:actionViewClass="android.widget.SearchView" />
 
 </menu>
