--- a/res/menu/docs_frag.xml
+++ b/res/menu/docs_frag.xml
@@ -10,11 +10,11 @@
                 <item
                     android:id="@+id/new_folder"
                     android:showAsAction="ifRoom"
-                    android:title="@string/new_folder"/>
+                    android:title="@string/new_folder" />
                 <item
                     android:id="@+id/new_doc"
                     android:showAsAction="ifRoom"
-                    android:title="@string/new_doc"/>
+                    android:title="@string/new_doc" />
             </group>
         </menu>
     </item>
@@ -23,7 +23,6 @@
         android:icon="@android:drawable/ic_menu_search"
         android:showAsAction="always|collapseActionView"
         android:title="@string/search"
-        android:actionViewClass="android.widget.SearchView"
-        />
+        android:actionViewClass="android.widget.SearchView" />
 
 </menu>
