fixed #50 (params must not have null values); an map icon is added besides the address in contacts view

--- a/res/layout/contact_frag.xml
+++ b/res/layout/contact_frag.xml
@@ -107,8 +107,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:autoLink="all"
+            android:linksClickable="false"
             android:hint="@string/address"
-            android:linksClickable="false" />
+            android:drawableRight="@drawable/ic_menu_mapmode" />
 
         <TextView
             android:id="@+id/lbl_phones"
